--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "jinja2>=3.1.5",
+    "python-fasthtml>=0.12.0",
     "questionary>=2.1.0",
     "requests>=2.32.3",
     "rich>=13.9.4",
